--- a/infopage.css
+++ b/infopage.css
@@ -16,7 +16,7 @@ a{
     align-content: center;
     justify-content: center;
     color:#ffdee9;
-    
+    font-size:70%;
     
 }
 #content-par{
@@ -75,9 +75,16 @@ a{
 #image-scale{
     background-image: url("pubg.jpg");
     width:100%;
-    height:70%;
+    height:60%;
     background-attachment:fixed;
     background-position: center;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    color:#ffdee9;
+    text-align: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -85,7 +92,7 @@ a{
 
     background-image: url("fortnite\ hero.jpg");
     width:100%;
-    height:70%;
+    height:60%;
     background-attachment:fixed;
     background-position: center;
     background-size: cover;
