--- a/style.css
+++ b/style.css
@@ -53,11 +53,19 @@ html,body{
 
 #navbar{
     display: flex;
-    padding:10px;
-    font-size:50%;
+    padding:5px;
+    font-size: 20px;
     position:fixed;
     background:rgba(255,255,255,0.8);
     width:100%;
+    justify-content: flex-end;
+    z-index: 9999;
+    top: 0;
+}
+#navbar div{
+    margin:10px;
+    padding-right: 30px;
+    cursor: pointer;
 }
 @media (min-aspect-ratio: 16/9) {
     #myVideo{
