--- a/gallery.css
+++ b/gallery.css
@@ -27,7 +27,7 @@ a{
 	}
 }
 #background{
-    height:90%;
+    height:70%;
     background: linear-gradient(-45deg, #f34573, #2a6171, #75cac3, #240041);
     background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
@@ -57,35 +57,66 @@ a{
     transition: all .2s ease-in-out;
     height:30vh;
     margin:30px;
-    
-    
+
+
 }
 
 #im1{
     background-image: url("im2.jpg");
-    
+
 }
 #im2{
     background-image: url("im3.jpeg");
-    
+
 }
 #im3{
     background-image: url("im1.jpeg");
-    
+
 }
 
 #im4{
     background-image: url("im4.jpg");
-    
+
 }
 #im5{
     background-image: url("im5.jpg");
-    
+
 }
 #im6{
     background-image: url("im6.jpg");
-    
+
 }
 .gallery-im:hover{
     transform: scale(1.5);
+}
+
+.footer {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 40px;
+}
+
+hr {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.footer-button {
+  width: 250px;
+  height: 70px;
+  margin: 0 auto;
+  line-height: 70px;
+  background-color: black;
+  color: white;
+  border-radius: 15px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.footer-button:hover {
+  background-color: #ff0b55;
+  color:#ffdee9;
+  transform: scale(1.2);
+  transition: ease-in-out .5s;
 }
