--- a/infopage.css
+++ b/infopage.css
@@ -3,7 +3,7 @@ a{
     color:inherit;
 }
 #background{
-    height:90%;
+    height:70%;
     background: linear-gradient(-45deg, #ff0b55, #fd5f00, #d61d4e, #240041);
     background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
@@ -17,13 +17,13 @@ a{
     justify-content: center;
     color:#ffdee9;
     font-size:70%;
-    
+
 }
 #content-par{
     line-height:1em;
     font-size:50%;
-    margin:5%;
-    
+    margin:0%;
+
 }
 #background p{
     font-size:80%;
@@ -31,15 +31,21 @@ a{
 #navbar{
     display: flex;
     padding:5px;
-    font-size:50%;
+    font-size: 20px;
     position:fixed;
     background:rgba(255,255,255,0.8);
     width:100%;
+    justify-content: flex-end;
+    z-index: 9999;
 }
 #navbar div{
     margin:10px;
+    padding-right: 30px;
     cursor: pointer;
 }
+
+
+
 @-webkit-keyframes Gradient {
 	0% {
 		background-position: 0% 50%
@@ -65,13 +71,33 @@ a{
 }
 #history{
     display: flex;
-    
+    justify-content: space-between;
+
 }
 #history div{
-    
-    
-    font-size: 80%;
+
+
+    font-size: 20px;
 }
+
+.history-image, .history-content {
+  flex: 1;
+
+}
+
+.history-content {
+  margin: 100px;
+}
+
+.history-content h4 {
+  font-size: 40px;
+}
+
+.history-image img {
+  width: 100%;
+  height: 100%;
+}
+
 #image-scale{
     background-image: url("pubg.jpg");
     width:100%;
@@ -88,6 +114,33 @@ a{
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.footer {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+}
+
+.footer-button {
+  width: 250px;
+  height: 70px;
+  margin: 0 auto;
+  line-height: 70px;
+  background-color: black;
+  color: white;
+  border-radius: 15px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.footer-button:hover {
+  background-color: #ff0b55;
+  color:#ffdee9;
+  transform: scale(1.2);
+  transition: ease-in-out .5s;
+}
+
 #image-scale-2{
 
     background-image: url("fortnite\ hero.jpg");
@@ -97,4 +150,21 @@ a{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+@media (max-width:320px)  { 
+
+  .history-content h4{
+    line-height:1.2em;
+  }
+  .history-content{
+    margin:10px;
+  }
+  .history-image{
+    display: none;
+  }
+  #content-par{
+    line-height:1.2em;
+    margin:0;
+    padding:0;
+  }
 }
